2008-07-22  Sancho Lerena <slerena@gmail.com>

	* pandora_network: Minimal style changes. Added status change in 
	tserver table on controlled shutdown.

	* pandora_server: Added status change in tserver table on controlled 
	shutdown. Minimal changes and optimizations. Recheck for bad XML is 
	adjusted to 3 instead 10.Fixed problem with "blank" agent names. Added
	support for async types (data, proc and string).

	* config.pm: Added support for new config token: max_log_size. This
	stablish a max log filesize.

	* DB.pm: Added support for postprocess (as simple multiplier value). 
	Fixed problem with continuous update of laststart in server keepalive.
	Updated also several logger priorities (raise them).

	* Config.pm: pandora_get_os() fixed for void OSes. Logger() implements
	a file-rotation system with a maximum in bytes for PandoraFMS log file.
	
	* pandora_server.conf: Updated with new options and removed some from 1.3.1
 	
	* pandora_export: Deleted skeleton file por export server. 

2008-07-11  Evi Vanoost <vanooste@rcbi.rochester.edu>

	* pandora_server/pandora_network
	* pandora_server/pandora_recon
	* pandora_server/pandora_plugin
	* pandora_server/pandora_prediction: Updated the queries it performs. Made the MASTER server query a nested query, that way you don't join thousands of records (it was up to 6000 in my environment) while you only need a few records. It won't log as a slow query (indexes are used)

2008-07-10  Evi Vanoost <vanooste@rcbi.rochester.edu>
	
	* pandora_server_installer: Some typos

2008-07-08  Sancho Lerena <slerena@gmail.com>

	* pandora_server: An event is generated if a BAD XML is detected.

2008-07-06  Sancho Lerena <slerena@gmail.com>

        * pandora_network: Added a patch from godzone-nz, to implement
        in TCP remote checks a multi-request meth (also in 1.3.1 version).

2008-07-02  Sancho Lerena <slerena@gmail.com>

	* pandora_wmi: Finished first functional version. Uses wmic from